# WinMarks

./: .gitignore  CMakeLists.txt  InstallDir.wxs  NotifyIcon.cpp  NotifyIcon.h  OptionsDlg.wxs  README.md  TODO.txt  WinMarks.rc.in  WixPatch.xml  license.txt  main.cpp  resource.h
res/: Icon_16x16.kra  Icon_16x16.kra~  Icon_16x16.png~  Icon_32x32.kra  Icon_32x32.kra~  Icon_32x32.png~  Icon_48x48.kra  Icon_60x60.kra  Installer_Banner.kra  Installer_Dialog.kra
